# terraform-aws-gata

./: .gitignore  .tflint.hcl  LICENSE.txt  README.md  db.tf  ecr.tf  ecs.tf  eventbus.tf  finetune.tf  firehose.tf  kms.tf  main.tf  mock-data.tf  mock-ticket-update.tf  prepare-text.tf  s3.tf  ssm.tf  variables.tf  versions.tf  workflow-assigned-ticket.tf  workflow-close-ticket.tf  workflow-new-ticket.tf  workflow-ticket-data.tf
.github/: dependabot.yml
.github/workflows/: ci.yaml
examples/quickstart/: .terraform.lock.hcl  README.md  main.tf  provider.tf
modules/db/: README.md  db.tf  outputs.tf  secretsmanager.tf  setup.sql  variables.tf  vpc.tf
modules/ecr/: README.md  ecr.tf  main.tf  outputs.tf  variables.tf
modules/eventbus/: README.md  lambda.tf  outputs.tf  pyproject.toml  variables.tf  versions.tf
modules/eventbus/handler/: __init__.py  handler.py  test_handler.py
modules/finetune-workflow/: README.md  iam-data-prep.tf  iam-sfn.tf  logs.tf  main.tf  network.tf  outputs.tf  s3.tf  sfn.tf  variables.tf  workflow.asl.json
modules/firehose/: README.md  cloudwatch.tf  eventbridge.tf  firehose.tf  iam.tf  outputs.tf  variables.tf
modules/mock-data/: .gitignore  README.md  dlq.tf  iam.tf  main.tf  prompt.txt  scheduler.tf  sfn.tf  variables.tf  workflow-new-ticket.asl.json
modules/mock-ticket-update/: README.md  lamda.tf  output.tf  pyproject.toml  variables.tf
modules/mock-ticket-update/handler/: __init__.py  handler.py  test_handler.py
modules/model-workflow/: README.md  iam.tf  outputs.tf  sagemaker-finetune.tf  sagemaker-inference.tf  sfn.tf  variables.tf  workflow.asl.json
modules/oidc-pipeline/: README.md  iam.tf  outputs.tf  variables.tf
modules/prepare-text/: .gitignore  README.md  lamda.tf  main.tf  output.tf  pyproject.toml  variables.tf  versions.tf
modules/prepare-text/handler/: __init__.py  handler.py  test_handler.py
modules/s3/: README.md  bucket.tf  main.tf  outputs.tf  variables.tf
modules/workflow-assigned-ticket/: README.md  eventbus.tf  iam.tf  main.tf  output.tf  sfn.tf  variables.tf  workflow.asl.json
modules/workflow-close-ticket/: README.md  eventbus.tf  iam.tf  main.tf  output.tf  prompt.txt  sfn-record.tf  sfn-summary.tf  variables.tf  versions.tf  workflow-record.asl.json  workflow-summary.asl.json
modules/workflow-new-ticket/: README.md  eventbus.tf  iam.tf  main.tf  output.tf  prompt.txt  sfn.tf  variables.tf  workflow.asl.json
modules/workflow-ticket-data/: README.md  iam.tf  main.tf  output.tf  sfn.tf  variables.tf  workflow.asl.json
scripts/backfill/: .gitignore  README.md  __init__.py  backfill.py  pyproject.toml
