[project]
name = "gata-zendesk-to-eventbus"
authors = [
    {name = "Dave Hall", email = "me@davehall.com.au"},
]
description = "Lambda function that receives webook events from zendesk and puts them on an Amazon EventBridge bus."

requires-python = ">=3.13, <3.14" # version constraint matches lambda environment.

dependencies = [
]

readme = "README.md"

dynamic = ["version"]

[dependency-groups]
dev = [
  "aws-lambda-powertools==3.24.0",
  "boto3==1.42.43",
  "coverage==7.13.3",
  "moto==5.1.20",
  "pydantic==2.12.5",
  "pytest==9.0.2",
  "pytest-mock==3.15.1",
  "ruff==0.15.0",
  "ty==0.0.15",
  "types-boto3[events,ssm]==1.42.39",
]

[build-system]
requires = [
    "hatchling==1.28.0",
    "hatch-vcs==0.5.0",
]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
search_parent_directories = true

[tool.hatch.build.targets.wheel]
packages = ["handler"]

[tool.ruff.lint]
# Rules listed at https://github.com/charliermarsh/ruff#supported-rules
select = ["B", "D", "E", "F", "G", "I", "N", "S", "W", "ANN" ,"BLE", "C4", "C90", "CPY", "DTZ", "ERA", "PLW", "PT", "RET", "RUF", "SIM", "TRY", "UP"]
ignore = ["D203", "D211", "D212", "E501", "F403", "F405"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["B", "D", "E", "F", "G", "I", "N", "S", "W", "ANN" ,"BLE", "C4", "C90", "CPY", "DTZ", "ERA", "PLW", "PT", "RET", "RUF", "SIM", "TRY", "UP"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"handler/test_*" = ["S101", "S108"]
